# raspiwifirepeater

./: .env.local  .gitignore  README.md  main.py  pyproject.toml  setup.sh
DOC/: db.drawio
DOC/install/: README.md  log.sh
install/: README.md  config_systemd.sh  seed.py  setup.sh
raspiwifirepeater/: README.md
raspiwifirepeater/backend/: .gitignore  STEP_BY_STEP.md  db.sqlite3  index.py
raspiwifirepeater/backend/backend/: settings.py  urls.py
raspiwifirepeater/backend/core_api/: admin.py  models.py  serializers.py  urls.py  views.py
raspiwifirepeater/backend/core_api/migrations/: 0001_initial.py
raspiwifirepeater/backend/lib/: convert.py  network.py
raspiwifirepeater/frontend/: .env  README.md  index.py  package-lock.json  package.json  tailwind.config.js
raspiwifirepeater/frontend/src/: App.js  routes.js
raspiwifirepeater/frontend/src/components/Layout/: index.js
raspiwifirepeater/frontend/src/pages/: overview.js  settings.js  wifi.js
raspiwifirepeater/frontend/src/services/: api.js
tests/: test.py  test_raspiwifirepeater.py
